--- a/application/views/scripts/arrasto-fundo/index.phtml
+++ b/application/views/scripts/arrasto-fundo/index.phtml
@@ -74,7 +74,7 @@
                 <div class="form-esq">
 
                     <label>Data:</label>
-                    <input type="date" name="dataSaida" min="2013-11-01"  placeholder="Data da Saída" required/>
+                    <input type="date" name="dataSaida" min="2013-11-01"  max = "<?= date("Y-m-d"); ?>"  placeholder="Data da Saída" required/>
                 </div>
                 <div class="form-esq">
                     <label>Horas:</label>
@@ -84,7 +84,7 @@
             <div class="direita-entrevista">
                 <div class="form-esq">
                     <label>Data:</label>
-                    <input type="date" name="dataVolta" min="2013-11-01" placeholder="Data da Volta" required/>
+                    <input type="date" name="dataVolta" min="2013-11-01"  max = "<?= date("Y-m-d"); ?>" placeholder="Data da Volta" required/>
                 </div>
                 <div class="form-esq">
                     <label>Horas:</label>
