--- a/application/views/scripts/calao/index.phtml
+++ b/application/views/scripts/calao/index.phtml
@@ -76,7 +76,7 @@
                 <legend><h4>Tempo:</h4></legend>
                 <div class="form-esq">
                     <label>Data:</label>
-                    <input type="date" name="data" min="2013-11-01" required/>
+                    <input type="date" name="data" min="2013-11-01"  max = "<?= date("Y-m-d"); ?>" required/>
                 </div>
                 <div class="form-esq">
                     <label>Tempo Gasto:</label>
