--- a/application/views/scripts/especie/index.phtml
+++ b/application/views/scripts/especie/index.phtml
@@ -3,15 +3,19 @@
 
     <a href="<?= $this->url(array("controller" => "especie", "action" => "novo"), null, true) ?>" id="botao-ancora">Novo</a>
     <fieldset id="Filogenia"></fieldset>
-    <table>
+    <table id="dataTable" class="display" cellspacing="0" width="100%">
+        <thead>
         <tr>
             <th>ID</th>
             <th>Especie</th>
             <th>Descritor</th>
             <th>Nome Comum</th>
             <th>Gênero</th>
+            <th></th>
+            <th></th>
         </tr>
-
+        </thead>
+        <tbody>
         <?php
         foreach ($this->dados as $key => $especie):
             ?>
@@ -21,14 +25,14 @@
                 <td><?= $especie['esp_descritor'] ?></td>
                 <td><?= $especie['esp_nome_comum'] ?></td>
                 <td><?= $especie['gen_id'] ?></td>
-                <td class="td-botao">
+                <td >
                     <a href="<?= $this->url(array("controller" => "especie", "action" => "editar", "id" => $especie['esp_id']), null, true) ?>">
                         <ul id="icons" class="ui-widget ui-helper-clearfix">
                             <li class="ui-state-default ui-corner-all" title="Editar"><span class="ui-icon ui-icon-pencil"></span></li>
                         </ul>
                     </a>
                 </td>
-                <td class="td-botao">
+                <td >
                     <a onclick="beforeDelete('<?= $this->url(array("controller" => "especie", "action" => "excluir", "id" => $especie['esp_id']), null, true) ?>')">
                         <ul id="icons" class="ui-widget ui-helper-clearfix">
                             <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
@@ -37,6 +41,7 @@
                 </td>
             </tr>
         <?php endforeach; ?>
+        </tbody>
     </table>
     <br/><br/>
     <a href="<?= $this->url(array("controller" => "especie", "action" => "relatorio"), null, true) ?>" id="botao-ancora" target="_blank">Gerar Relatório</a>
