--- a/application/views/scripts/familia/index.phtml
+++ b/application/views/scripts/familia/index.phtml
@@ -4,15 +4,19 @@
     <a href="<?= $this->url(array("controller" => "familia", "action" => "novo"), null, true) ?>" id="botao-ancora">Novo</a>
     <fieldset id="Filogenia"></fieldset>
 
-    <table>
+    <table id="dataTable" class="display" cellspacing="0" width="100%">
+    <thead>
         <tr>
             <th>ID</th>
             <th>Família</th>
             <th>Tipo</th>
             <th>Característica</th>
             <th>Ordem</th>
+            <th></th>
+            <th></th>
         </tr>
-
+    </thead>
+        <tbody>
         <?php
         foreach ($this->dados as $key => $familia):
             ?>
@@ -22,14 +26,14 @@
                 <td><?= $familia['fam_tipo'] ?></td>
                 <td><?= $familia['fam_caracteristica'] ?></td>
                 <td><?= $familia['ord_id'] ?></td>
-                <td class="td-botao">
+                <td >
                     <a href="<?= $this->url(array("controller" => "familia", "action" => "editar", "id" => $familia['fam_id']), null, true) ?>">
                         <ul id="icons" class="ui-widget ui-helper-clearfix">
                             <li class="ui-state-default ui-corner-all" title="Editar"><span class="ui-icon ui-icon-pencil"></span></li>
                         </ul>
                     </a>
                 </td>
-                <td class="td-botao">
+                <td >
                     <a onclick="beforeDelete('<?= $this->url(array("controller" => "familia", "action" => "excluir", "id" => $familia['fam_id']), null, true) ?>')">
                         <ul id="icons" class="ui-widget ui-helper-clearfix">
                             <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
@@ -38,6 +42,7 @@
                 </td>
             </tr>
         <?php endforeach; ?>
+        </tbody>
     </table>
     <br/><br/>
     <a href="<?= $this->url(array("controller" => "familia", "action" => "relatorio"), null, true) ?>" id="botao-ancora" target="_blank">Gerar Relatório</a>
