--- a/application/views/scripts/grupo/index.phtml
+++ b/application/views/scripts/grupo/index.phtml
@@ -4,26 +4,30 @@
 
     <a href="<?= $this->url(array("controller" => "grupo", "action" => "novo"), null, true) ?>" id="botao-ancora">Novo</a>
     <fieldset id="Filogenia"></fieldset>
-    <table>
+    <table id="dataTable" class="display" cellspacing="0" width="100%">
+    <thead>
         <tr>
             <th>ID</th>
             <th>Grupo</th>
+            <th></th>
+            <th></th>
         </tr>
-
+    </thead>
+        <tbody>
         <?php
         foreach ($this->dados as $key => $grupo):
             ?>
             <tr>
                 <td><?= $grupo['grp_id'] ?></td>
                 <td><?= $grupo['grp_nome'] ?></td>
-                <td class="td-botao">
+                <td >
                     <a href="<?= $this->url(array("controller" => "grupo", "action" => "editar", "id" => $grupo['grp_id']), null, true) ?>">
                         <ul id="icons" class="ui-widget ui-helper-clearfix">
                             <li class="ui-state-default ui-corner-all" title="Editar"><span class="ui-icon ui-icon-pencil"></span></li>
                         </ul>
                     </a>
                 </td>
-                <td class="td-botao">
+                <td >
                     <a onclick="beforeDelete('<?= $this->url(array("controller" => "grupo", "action" => "excluir", "id" => $grupo['grp_id']), null, true) ?>')">
                         <ul id="icons" class="ui-widget ui-helper-clearfix">
                             <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
@@ -32,6 +36,7 @@
                 </td>
             </tr>
         <?php endforeach; ?>
+        </tbody>
     </table>
     <br/><br/>
     <a href="<?= $this->url(array("controller" => "grupo", "action" => "relatorio"), null, true) ?>" id="botao-ancora" target="_blank">Gerar Relatório</a>
