--- a/application/views/scripts/tarrafa/index.phtml
+++ b/application/views/scripts/tarrafa/index.phtml
@@ -72,7 +72,7 @@
                 <legend><h4>Tempo:</h4></legend>
                 <div class="form-esq">
                     <label>Data:</label>
-                    <input type="date" min="2013-11-01" name="data" required/>
+                    <input type="date" min="2013-11-01"  max = "<?= date("Y-m-d"); ?>" name="data" required/>
                 </div>
                 <div class="form-esq">
                     <label>Tempo Gasto:</label>
