--- a/application/views/scripts/arrasto-fundo/editar.phtml
+++ b/application/views/scripts/arrasto-fundo/editar.phtml
@@ -87,7 +87,7 @@
                 <div class="form-esq">
 
                     <label>Data:</label>
-                    <input type="date" name="dataSaida" placeholder="Data da Saída" min="2013-11-01" value="<?=$this->dataSaida ?>"/>
+                    <input type="date" name="dataSaida" placeholder="Data da Saída" min="2013-11-01"  max = "<?= date("Y-m-d"); ?>" value="<?=$this->dataSaida ?>"/>
                 </div>
                 <div class="form-esq">
                     <label>Horas:</label>
@@ -97,7 +97,7 @@
             <div class="direita-entrevista">
                 <div class="form-esq">
                     <label>Data:</label>
-                    <input type="date" name="dataVolta" placeholder="Data da Volta" min="2013-11-01" value="<?=$this->dataVolta ?>"/>
+                    <input type="date" name="dataVolta" placeholder="Data da Volta" min="2013-11-01"  max = "<?= date("Y-m-d"); ?>" value="<?=$this->dataVolta ?>"/>
                 </div>
                 <div class="form-esq">
                     <label>Horas:</label>
