--- a/application/views/scripts/barcos/index.phtml
+++ b/application/views/scripts/barcos/index.phtml
@@ -18,7 +18,7 @@
         </fieldset>
         <br>
 
-        <table id="tblPerfil" class="display" cellspacing="0" width="100%">
+        <table id="dataTable" class="display" cellspacing="0" width="100%">
             <thead>
             <tr>
                 <th colspan="1">ID </th>
