--- a/application/views/scripts/calao/editar.phtml
+++ b/application/views/scripts/calao/editar.phtml
@@ -83,7 +83,7 @@
                 <legend><h4>Tempo:</h4></legend>
                 <div class="form-esq">
                     <label>Data:</label>
-                    <input type="date" name="data" min="2013-11-01" value="<?=$this->entrevista['cal_data']?>"/>
+                    <input type="date" name="data" min="2013-11-01"  max = "<?= date("Y-m-d"); ?>" value="<?=$this->entrevista['cal_data']?>"/>
                 </div>
                 <div class="form-esq">
                     <label>Tempo Gasto:</label>
