--- a/application/views/scripts/destino-pescado/index.phtml
+++ b/application/views/scripts/destino-pescado/index.phtml
@@ -14,35 +14,41 @@
         </fieldset>
         <br>
 
-        <table id="tblDestinoPescado">
-            <tr>
-                <th width="15%">ID </th>
-                <th width="85%">Perfil</th>
-            </tr>
-            <?php foreach ($this->assignDestinoPescado as $key => $dadosDestinoPescado): ?>
-                <tr id="rowNumDestinoPescado<?= $key ?>">
+        <table id="dataTable" class="display" cellspacing="0" width="100%">
+            <thead>
+                <tr>
+                <th>ID </th>
+                <th>Perfil</th>
+                <th></th>
+                <th></th>
+                </tr>
+            </thead>   
+            <tbody>
+                <?php foreach ($this->assignDestinoPescado as $key => $dadosDestinoPescado): ?>
+                    <tr id="rowNumDestinoPescado<?= $key ?>">
                     <td><?= $dadosDestinoPescado['dp_id'] ?></td>
                     <td><?= $dadosDestinoPescado['dp_destino'] ?></td>
-                    <td class="td-botao">
+                    <td >
                         <a onclick="jsUpdateDestinoPescado('<?= $dadosDestinoPescado['dp_id'] ?>', '<?= $dadosDestinoPescado['dp_destino'] ?>', document.getElementById('destino-pescado'))">
                             <ul id="icons" class="ui-widget ui-helper-clearfix">
                                 <li class="ui-state-default ui-corner-all" title="Editar"><span class="ui-icon ui-icon-pencil"></span></li>
                             </ul>
                         </a>
                     </td>
-                    <td class="td-botao">
+                    <td >
                         <a onclick="jsDeleteDestinoPescado(<?= $dadosDestinoPescado['dp_id'] ?>, '<?= $this->url(array("controller" => "destino-pescado", "action" => "delete"), null, true) ?>')">
                             <ul id="icons" class="ui-widget ui-helper-clearfix">
                                 <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
                             </ul>
                         </a>
                     </td>
-                </tr>
-            <?php endforeach; ?>
+                    </tr>
+                <?php endforeach; ?>
+            </tbody>
         </table>
     </fieldset>
     <fieldset class="noBorder">
-		<a href="<?= $this->url(array("controller" => "destino-pescado", "action" => "relatorio"), null, true) ?>" id="botao-ancora" target="_blank">Gerar Relatório</a>
+        <a href="<?= $this->url(array("controller" => "destino-pescado", "action" => "relatorio"), null, true) ?>" id="botao-ancora" target="_blank">Gerar Relatório</a>
         <br><input type="button" class="button-up" width="5%" onclick="scrollTo('top')">
     </fieldset>
 </form>
