--- a/application/views/scripts/emalhe/editar.phtml
+++ b/application/views/scripts/emalhe/editar.phtml
@@ -83,7 +83,7 @@
                 <legend><h4>Lançamento e Recolhimento:</h4></legend>
                 <div class="form-esq">
                     <label>Data:</label>
-                    <input type="date" name="dataLancamento" min="2013-11-01" placeholder="Lançamento" value="<?=$this->dataSaida?>"/>
+                    <input type="date" name="dataLancamento" min="2013-11-01"  max = "<?= date("Y-m-d"); ?>" placeholder="Lançamento" value="<?=$this->dataSaida?>"/>
                 </div>
                 <div class="form-esq">
                     <label>Hora:</label>
@@ -93,7 +93,7 @@
             <div class="direita-entrevista">
                 <div class="form-esq">
                     <label>Data:</label>
-                    <input type="date" name="dataRecolhimento" min="2013-11-01" placeholder="Recolhimento" value="<?=$this->dataVolta?>"/>
+                    <input type="date" name="dataRecolhimento" min="2013-11-01"  max = "<?= date("Y-m-d"); ?>" placeholder="Recolhimento" value="<?=$this->dataVolta?>"/>
                 </div>
                 <div class="form-esq">
                     <label>Hora:</label>
