--- a/application/views/scripts/emalhe/index.phtml
+++ b/application/views/scripts/emalhe/index.phtml
@@ -76,7 +76,7 @@
                 <legend><h4>Lançamento e Recolhimento:</h4></legend>
                 <div class="form-esq">
                     <label>Data:</label>
-                    <input type="date" name="dataLancamento" min="2013-11-01" required/>
+                    <input type="date" name="dataLancamento" min="2013-11-01"  max = "<?= date("Y-m-d"); ?>" required/>
                 </div>
                 <div class="form-esq">
                     <label>Hora:</label>
@@ -86,7 +86,7 @@
             <div class="direita-entrevista">
                 <div class="form-esq">
                     <label>Data:</label>
-                    <input type="date" name="dataRecolhimento" min="2013-11-01" required/>
+                    <input type="date" name="dataRecolhimento" min="2013-11-01"  max = "<?= date("Y-m-d"); ?>" required/>
                 </div>
                 <div class="form-esq">
                     <label>Hora:</label>
