--- a/application/views/scripts/porto/index.phtml
+++ b/application/views/scripts/porto/index.phtml
@@ -4,13 +4,18 @@
 
     <a href="<?= $this->url(array("controller" => "porto", "action" => "novo"), null, true) ?>" id="botao-ancora">Novo</a>
     <fieldset id="dadosDesembarque"></fieldset>
-    <table>
+    <table id="dataTable" class="display" cellspacing="0" width="100%">
+        <thead>
         <tr>
             <th>ID</th>
             <th>Nome</th>
             <th>Local</th>
+            <th></th>
+            <th></th>
         </tr>
-
+        </thead>
+        
+        <tbody>
         <?php
         foreach ($this->dados as $key => $porto):
             ?>
@@ -18,14 +23,14 @@
                 <td><?= $porto['pto_id'] ?></td>
                 <td><?= $porto['pto_nome'] ?></td>
                 <td><?= $porto['pto_local'] ?></td>
-                <td class="td-botao">
+                <td >
                     <a href="<?= $this->url(array("controller" => "porto", "action" => "editar", "id" => $porto['pto_id']), null, true) ?>">
                         <ul id="icons" class="ui-widget ui-helper-clearfix">
                             <li class="ui-state-default ui-corner-all" title="Editar"><span class="ui-icon ui-icon-pencil"></span></li>
                         </ul>
                     </a>
                 </td>
-                <td class="td-botao">
+                <td >
                     <a onclick="beforeDelete('<?= $this->url(array("controller" => "porto", "action" => "excluir", "id" => $porto['pto_id']), null, true) ?>')">
                         <ul id="icons" class="ui-widget ui-helper-clearfix">
                             <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
@@ -34,6 +39,7 @@
                 </td>
             </tr>
         <?php endforeach; ?>
+        </tbody>
     </table>
     <br/><br/>
     <a href="<?= $this->url(array("controller" => "porto", "action" => "relatorio"), null, true) ?>" id="botao-ancora" target="_blank">Gerar Relatório</a>
