--- a/application/views/scripts/siripoia/index.phtml
+++ b/application/views/scripts/siripoia/index.phtml
@@ -73,7 +73,7 @@
                 <div class="form-esq">
 
                     <label>Data:</label>
-                    <input type="date" name="dataSaida" min="2013-11-01" required/>
+                    <input type="date" name="dataSaida" min="2013-11-01"  max = "<?= date("Y-m-d"); ?>" required/>
                 </div>
                 <div class="form-esq">
                     <label>Horas:</label>
@@ -83,7 +83,7 @@
             <div class="direita-entrevista">
                 <div class="form-esq">
                     <label>Data:</label>
-                    <input type="date" name="dataVolta" min="2013-11-01" required/>
+                    <input type="date" name="dataVolta" min="2013-11-01"  max = "<?= date("Y-m-d"); ?>" required/>
                 </div>
                 <div class="form-esq">
                     <label>Horas:</label>
