--- a/application/views/scripts/tipo-embarcacao/index.phtml
+++ b/application/views/scripts/tipo-embarcacao/index.phtml
@@ -1,40 +1,46 @@
 
-    <h2>Perfil Social->Tipo de Embarcação</h2>
+<h2>Perfil Social->Tipo de Embarcação</h2>
 
 
-    <a href="<?= $this->url(array("controller" => "tipo-embarcacao", "action" => "novo"), null, true) ?>" id="botao-ancora">Novo</a>
-    <fieldset id="dadosSocial"></fieldset>
-    <table>
+<a href="<?= $this->url(array("controller" => "tipo-embarcacao", "action" => "novo"), null, true) ?>" id="botao-ancora">Novo</a>
+<fieldset id="dadosSocial"></fieldset>
+<table id="dataTable" class="display" cellspacing="0" width="100%">
+    <thead>
         <tr>
-            <th>ID</th>
-            <th>Tipo de Embarcação</th>
+        <th>ID</th>
+        <th>Tipo de Embarcação</th>
+        <th></th>
+        <th></th>
         </tr>
+    </thead>
+    <tbody>
 
         <?php
         foreach ($this->dados as $key => $tipoEmbarcacao):
             ?>
             <tr>
-                <td><?= $tipoEmbarcacao['tte_id'] ?></td>
-                <td><?= $tipoEmbarcacao['tte_tipoembarcacao'] ?></td>
+            <td><?= $tipoEmbarcacao['tte_id'] ?></td>
+            <td><?= $tipoEmbarcacao['tte_tipoembarcacao'] ?></td>
 
-                <td class="td-botao">
-                    <a href="<?= $this->url(array("controller" => "tipo-embarcacao", "action" => "editar", "id" => $tipoEmbarcacao['tte_id']), null, true) ?>">
-                        <ul id="icons" class="ui-widget ui-helper-clearfix">
-                            <li class="ui-state-default ui-corner-all" title="Editar"><span class="ui-icon ui-icon-pencil"></span></li>
-                        </ul>
-                    </a>
-                </td>
+            <td >
+                <a href="<?= $this->url(array("controller" => "tipo-embarcacao", "action" => "editar", "id" => $tipoEmbarcacao['tte_id']), null, true) ?>">
+                    <ul id="icons" class="ui-widget ui-helper-clearfix">
+                        <li class="ui-state-default ui-corner-all" title="Editar"><span class="ui-icon ui-icon-pencil"></span></li>
+                    </ul>
+                </a>
+            </td>
 
-                <td class="td-botao">
-                    <a value="Excluir" onclick="beforeDelete('<?= $this->url(array("controller" => "tipo-embarcacao", "action" => "excluir", "id" => $tipoEmbarcacao['tte_id']), null, true) ?>')">
-                        <ul id="icons" class="ui-widget ui-helper-clearfix">
-                                <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
-                        </ul>
-                    </a> 
-                </td>
+            <td >
+                <a value="Excluir" onclick="beforeDelete('<?= $this->url(array("controller" => "tipo-embarcacao", "action" => "excluir", "id" => $tipoEmbarcacao['tte_id']), null, true) ?>')">
+                    <ul id="icons" class="ui-widget ui-helper-clearfix">
+                        <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
+                    </ul>
+                </a> 
+            </td>
 
             </tr>
         <?php endforeach; ?>
-    </table>
-    <br/><br/>
-    <a href="<?= $this->url(array("controller" => "tipo-embarcacao", "action" => "relatorio"), null, true) ?>" id="botao-ancora" target="_blank">Gerar Relatório</a>
+    </tbody>
+</table>
+<br/><br/>
+<a href="<?= $this->url(array("controller" => "tipo-embarcacao", "action" => "relatorio"), null, true) ?>" id="botao-ancora" target="_blank">Gerar Relatório</a>
